# lidarXplore

./: README.md
cad_models/STLs/: Battery and LiDAR Mount Bracket.stl  Motor mount M3.stl  coupling_v1.1.stl
esp_ws/first_esp32_project/: platformio.ini
esp_ws/first_esp32_project/src/: main.cpp
esp_ws/i2c_scanner/: platformio.ini
esp_ws/i2c_scanner/src/: main.cpp
esp_ws/lidarxplore/led_control/: platformio.ini
esp_ws/lidarxplore/led_control/src/: main.cpp
esp_ws/lidarxplore/motor_control/: platformio.ini
esp_ws/lidarxplore/motor_control/src/: main.cpp
esp_ws/microros_esp32/: platformio.ini
esp_ws/microros_esp32/src/: main.cpp
microros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
microros_ws/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.3
microros_ws/install/micro_ros_setup/config/: agent_uros_packages.repos  client_uros_packages.repos
microros_ws/log/: latest_build
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/log/: latest_build
ros2_ws/src/pkg_template_cpp/: CMakeLists.txt
ros2_ws/src/pkg_template_multi_language/: CMakeLists.txt
ros2_ws/src/pkg_template_multi_language/scripts/: node_template_py.py
ros2_ws/src/pkg_template_multi_language/src/: node_template_cpp.cpp
ros2_ws/src/pkg_template_py/: setup.cfg  setup.py
ros2_ws/src/pkg_udemy_course/: setup.cfg  setup.py
ros2_ws/src/ros2jazzy_opencv/: package.xml  setup.cfg  setup.py
(+168 files in other folders)
